# CSD2

./: Hello.txt  README.rtf
csd2b/03_sineSquareSaw/: OrganSynth.h  callback.cpp  main.cpp  output.csv  square.h
csd2b/Inheritance/: CMakeLists.txt  guitar.cpp  guitar.h  instrument.cpp  instrument.h  key.cpp  key.h  klarinet.cpp  klarinet.h  main.cpp  piano.cpp  piano.h  pluckedstring.cpp  pluckedstring.h  trumpet.cpp  trumpet.h  wind.cpp  wind.h
csd2b/Sinetest/: CMakeLists.txt  customCallback.h  main.cpp  sine.cpp  sine.h
csd2b/classexercise/: CMakeLists.txt  class.h  main.cpp
csd2b/eindopr:synthsong/: CMakeLists.txt  OrganSynth.cpp  Synth.h  audioToFile.h  callback.cpp  main.cpp  oscillator.h
csd2b/split/: class.cpp  class.h  main.cpp
